// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTemplate renders the card template with correct data 1`] = `
<div
  className="cardGrid"
>
  <div
    className="Card"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card"
      >
        <img
          alt="Dog"
          className="card-img-top"
          src="bulldog-image-link"
        />
        <div
          className="card-body"
        >
          <h6
            className="label"
          >
            card.name
            : 
          </h6>
          <h5
            className="card-title"
          >
            Max
          </h5>
          <h6
            className="label"
          >
            card.handling
            : 
          </h6>
          <h5
            className="card-title"
          >
            5
          </h5>
          <h6
            className="label"
          >
            card.breed
            : 
          </h6>
          <h5
            className="card-title"
          >
            Bulldog
          </h5>
          <button
            className="btn btn-warning"
            onClick={[Function]}
            type="button"
          >
            card.button
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Card"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card"
      >
        <img
          alt="Dog"
          className="card-img-top"
          src="labrador-image-link"
        />
        <div
          className="card-body"
        >
          <h6
            className="label"
          >
            card.name
            : 
          </h6>
          <h5
            className="card-title"
          >
            Bella
          </h5>
          <h6
            className="label"
          >
            card.handling
            : 
          </h6>
          <h5
            className="card-title"
          >
            5
          </h5>
          <h6
            className="label"
          >
            card.breed
            : 
          </h6>
          <h5
            className="card-title"
          >
            Labrador
          </h5>
          <button
            className="btn btn-warning"
            onClick={[Function]}
            type="button"
          >
            card.button
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardTemplate renders the card template with correct labels 1`] = `
<div
  className="cardGrid"
>
  <div
    className="Card"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card"
      >
        <img
          alt="Dog"
          className="card-img-top"
          src="bulldog-image-link"
        />
        <div
          className="card-body"
        >
          <h6
            className="label"
          >
            card.name
            : 
          </h6>
          <h5
            className="card-title"
          >
            Max
          </h5>
          <h6
            className="label"
          >
            card.handling
            : 
          </h6>
          <h5
            className="card-title"
          >
            5
          </h5>
          <h6
            className="label"
          >
            card.breed
            : 
          </h6>
          <h5
            className="card-title"
          >
            Bulldog
          </h5>
          <button
            className="btn btn-warning"
            onClick={[Function]}
            type="button"
          >
            card.button
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
